<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.sirrus86</groupId>
	<artifactId>s86powers-parent</artifactId>
	<packaging>pom</packaging>
	<version>parent</version>
	<name>Parent</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>s86powers-plugin</module>
		<module>s86powers-v1_13_R1</module>
		<module>s86powers-v1_13_R2</module>
		<module>s86powers-v1_14_R1</module>
		<module>s86powers-v1_15_R1</module>
		<module>s86powers-v1_16_R1</module>
		<module>s86powers-v1_16_R2</module>
		<module>s86powers-v1_16_R3</module>
		<module>s86powers-v1_17</module>
		<module>s86powers-v1_17_1</module>
		<module>s86powers-version</module>
	</modules>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>